--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -12,3 +12,8 @@ $first-font-title:"'Lora', serif";
 $first-font-body:"'Alegreya Sans', sans-serif";
 $second-font-title:"'Playfair Display', serif";
 $second-font-body:"'Montserrat', sans-serif";
+
+/*                 font-size               */
+
+$normal-size:1.5rem;
+$title-size:2rem;
